# byte_count

./: Cargo.toml
benches/: count.rs  count_newlines.rs
src/: lib.rs
