[package]
name = "count_bytes"
version = "0.1.0"
edition = "2021"

[profile.bench]
lto = "thin"
codegen-units = 1

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.9.0", features = ["small_rng"] }

[[bench]]
name = "count"
harness = false
